# wolfBoot

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.sample  INSTALL.md  Makefile  README.md  _My_TODO_Status.md  config2presets.py  i2.bat  i3.bat  is.bat  my_cctest.bat  my_test.bat  my_test.sh  wf.sh  wolfBoot.code-workspace  wolfbuild.sh  wtest.sh
.github/workflows/: footprint.yml  test-build-aarch64.yml  test-build-cmake-dot-config.yml  test-build-cmake-mac.yml  test-build-cmake-presets.yml  test-build-cmake-script.yml  test-build-cmake-windows.yml  test-build-cmake.yml  test-build.yml  test-configs.yml  test-cppcheck.yml  test-library.yml  test-renode-sha3.yml  test-visual-studio.yml  test-vscode.yml  test-wolfhsm-simulator.yml
IDE/MPLAB/: README.md
IDE/VSCode/: README.md  install.sh  wolfBoot.code-workspace
IDE/VisualStudio/: ALL_BUILD.vcxproj  README.md  ZERO_CHECK.vcxproj  binAssemble.vcxproj  cmake_install.cmake  key_clean.bat  keygen_build.vcxproj  keystore.c  keystore.vcxproj  keytools.vcxproj  public_key.vcxproj  sign_host.vcxproj  target.h  wolfBoot.sln  wolfBoot.vcxproj  wolfBootFlashOTP.vcxproj  wolfBootFlashPrimerOTP.vcxproj  wolfBootImage.props  wolfBootKeyTools.sln  wolfBootKeygen.props  wolfBootKeygenTool.vcxproj  wolfBootSign.props  wolfBootSignHash.props  wolfBootSignTool.vcxproj  wolfBootTestLib.vcxproj  wolfboothal.vcxproj
IDE/VisualStudio/host_shims/: unistd.h
IDE/VisualStudio/lib/: cmake_install.cmake  wolfcrypt.vcxproj
IDE/Windows/: README.md
cmake/: README.md  config_defaults.cmake  config_defaults_user.cmake.sample  cube_ide_config.cmake  current_user.cmake  functions.cmake  load_dot_config.cmake  stm32_hal_download.cmake  toolchain_aarch64-none-elf.cmake  toolchain_arm-none-eabi.cmake  utils.cmake  visualgdb_config.cmake  vs2022_config.cmake  wolfboot.cmake  write_size.cmake
cmake/downloads/: stm32l4.cmake
config/examples/: README.md
docs/: CMake.md  README.md  STM32.md  Signing.md  Windows.md
examples/: README.md
examples/stm32l4-cmake-walkthrough/: .gitignore  CMakeLists.txt  README.md  build.sh
examples/stm32l4-cmake-walkthrough/app/: README.md  hal.h  main.c  startup_stm32l4.c  target.h
examples/stm32l4-cmake-walkthrough/app/include/: README.md
examples/stm32l4-cmake-walkthrough/cmake/: stm32l4.ld  toolchain_arm-none-eabi.cmake
hal/: library.c  sim.c  stm32g0.c  unistd.h  win_compat.h
include/: encrypt.h  hal.h  image.h  keystore.h  printf.h  target.h.in  user_settings.h
include/wolfboot/: wolfboot.h
lib/: CMakeLists.txt  README.md
scripts/: my_cctest.bat  my_test.bat  my_test.sh  wolfboot_build.sh
src/: delta.c  image.c  libwolfboot.c
test-app/: CMakeLists.txt  Makefile  app_sim.c  startup_arm.c
tools/: test.mk
tools/keytools/: README.md  keygen.c  other_doc.md  sign.c  user_settings.h  wolfBootFlashOTP.vcxproj  wolfBootFlashPrimerOTP.vcxproj  wolfBootImage.props  wolfBootKeyTools.sln  wolfBootKeygenTool.vcxproj  wolfBootSignTool.vcxproj  wolfBootTestLib.vcxproj
tools/keytools/otp/: otp-keystore-gen.c  otp-keystore-primer.c
tools/scripts/: cmake_dev_prompt_test.bat  cmake_dot_config.sh  cmake_dotconfig_test.bat  cmake_test.bat  cmake_vs2022_test.bat  config2presets.py  gen_all_presets.sh  gen_vs.bat  image-peek.py  keystore_file_check.bat  keystore_file_check.sh  keystore_file_check_x.bat  keystore_file_check_x.sh  wolfboot-der-to-spki.py  wolfboot_build.sh  wolfboot_cmake_full_build.sh
tools/unit-tests/: unit-keystore.c
